Fixed carousel buttons on mobile

--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -4,8 +4,6 @@
     align-items: center;
 
     height: 100vh;
-
-    padding-top: 8vh;
 }
   
 .card-container {
@@ -17,10 +15,5 @@
     overflow: hidden;
 }
 
-@media only screen and (min-width: 600px) {
-  .projects-container {
-    padding-top: 2vh;
-  }
-}
 
 
